--- a/DemoDay/views/connect-local.ejs
+++ b/DemoDay/views/connect-local.ejs
@@ -1,9 +1,9 @@
 <!doctype html>
 <html>
 <head>
-    <title>21 Savage Fan Site</title>
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
+    <title>Connect</title>    
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="stylesheet" href="main.css" />
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
