--- a/DemoDay/views/login.ejs
+++ b/DemoDay/views/login.ejs
@@ -1,28 +1,13 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title></title>
-		<link rel="stylesheet" href="main.css" />
+<!doctype html>
+<html>
+<head>
+    <title>21 Savage Fan Site</title>
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
-
-  </head>
-  <body>
-    <h1>STEM Projects</h1>
-    <form class="" action="index.ejs" method="post">
-      <input type="text" name="" value="" placeholder="Username">
-      <input type="password" name="" value="" placeholder="Password">
-      <button type="button" name="button"> Login </button>
-    </form>
-    <script src="js/jquery.min.js"></script>
-    <script src="js/skel.min.js"></script>
-    <script src="js/util.js"></script>
-    <script src="js/main.js"></script>
-    <script src="side.js"></script>
-  </body>
-</html>
-<!-- <div class="container">
+</head>
+<body>
+<div class="container">
 <div class="col-sm-6 col-sm-offset-3">
 
     <h1><span class="fa fa-sign-in"></span> Login</h1>
@@ -31,7 +16,7 @@
         <div class="alert alert-danger"><%= message %></div>
     <% } %>
 
-     LOGIN FORM
+    <!-- LOGIN FORM -->
     <form action="/login" method="post">
         <div class="form-group">
             <label>Email</label>
@@ -52,4 +37,6 @@
 
 
 </div>
-</div> -->
+</div>
+</body>
+</html>
