--- a/DemoDay/views/profile.ejs
+++ b/DemoDay/views/profile.ejs
@@ -1,9 +1,11 @@
 <!doctype html>
 <html>
 <head>
-    <title>Profile</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="main.css" />
+    <title>21 Savage Fan Site</title>
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
+    <script src="https://kit.fontawesome.com/077191d827.js" crossorigin="anonymous"></script>
+    <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -64,10 +66,7 @@
 
 </div>
 
-  <script src="js/jquery.min.js"></script>
-  <script src="js/skel.min.js"></script>
-  <script src="js/util.js"></script>
-  <script src="js/main.js"></script>
-  <script src="side.js"></script>
+<script src="main.js"></script>
+
 </body>
 </html>
