--- a/DemoDay/views/index.ejs
+++ b/DemoDay/views/index.ejs
@@ -16,17 +16,15 @@
 
 		<!-- Header -->
 			<header id="header" class="alt">
-				<h1><strong><a href="index.ejs">STEM Projects For Fun</a></strong></h1>
+				<h1><strong><a href="index.ejs">STEM Projects</a></strong></h1>
 				<nav id="nav">
 					<ul>
-						<li><a href="index.ejs" action="/">Home</a></li>
-						<li><a href="generic.ejs">Generic</a></li>
-						<li><a href="elements.ejs">Elements</a></li>
-						<li><a href="sci.ejs">Science</a></li>
-						<li><a href="tech.ejs">Technology</a></li>
-						<li><a href="engi.ejs">Engineering</a></li>
-						<li><a href="math.ejs">Math</a></li>
-						<li> <a href="login.ejs">Login</a> </li>
+						<li><a href="/" action="/">Home</a></li>
+						<li><a href="/sci"action="/sci">Science</a></li>
+						<li><a href="/tech"action="/tech">Technology</a></li>
+						<li><a href="/engineering"action="/engineering">Engineering</a></li>
+						<li><a href="/math"action="/math">Math</a></li>
+						<li> <a href="/info"action="/info">Login</a> </li>
 					</ul>
 				</nav>
 			</header>
@@ -35,10 +33,6 @@
 
 		<!-- Banner -->
 			<section id="banner">
-				<h2>STEM Projects For Fun</h2>
-				<section>
-				  <p>If you want to see something cool go to the TECHNOLOGY page</p>
-				</section>
 				<ul class="actions">
 					<li><a href="#" class="button special big">Get Started</a></li>
 				</ul>
