--- a/DemoDay/views/sci.ejs
+++ b/DemoDay/views/sci.ejs
@@ -15,17 +15,15 @@
   <body>
     <!-- Header -->
       <header id="header">
-        <h1><strong><a href="index.ejs">STEM Projects For Fun</a></strong></h1>
+        <h1><strong><a href="index.ejs">STEM Projects</a></strong></h1>
         <nav id="nav">
           <ul>
-            <li><a href="index.ejs" action="/">Home</a></li>
-            <li><a href="generic.ejs">Generic</a></li>
-            <li><a href="elements.ejs">Elements</a></li>
-            <li><a href="views/sci.ejs">Science</a></li>
-            <li><a href="tech.ejs">Technology</a></li>
-            <li><a href="engi.ejs">Engineering</a></li>
-            <li><a href="math.ejs">Math</a></li>
-            <li> <a href="login.ejs">Login</a> </li>
+						<li><a href="/" action="/">Home</a></li>
+						<li><a href="/sci"action="/sci">Science</a></li>
+						<li><a href="/tech"action="/tech">Technology</a></li>
+						<li><a href="/engineering"action="/engineering">Engineering</a></li>
+						<li><a href="/math"action="/math">Math</a></li>
+						<li> <a href="/info"action="/info">Login</a> </li>
           </ul>
         </nav>
       </header>
