--- a/DemoDay/views/engi.ejs
+++ b/DemoDay/views/engi.ejs
@@ -8,16 +8,16 @@
 		<link rel="stylesheet" href="main.css" />
   </head>
   <body>
-    <h1>Enginering</h1>
-    <header>
-      <nav>
+    <header id="header" class="alt">
+      <h1><strong><a href="index.ejs">STEM Projects</a></strong></h1>
+      <nav id="nav">
         <ul>
-          <li> <a href="home.ejs">Home</a> </li>
-          <li><a href="sci.ejs">Science</a></li>
-          <li><a href="tech.ejs">Technology</a></li>
-          <li><a href="engi.ejs">Engineering</a></li>
-          <li><a href="math.ejs">Math</a></li>
-          <li> <a href="login.ejs">Login</a> </li>
+          <li><a href="/" action="/">Home</a></li>
+          <li><a href="/sci"action="/sci">Science</a></li>
+          <li><a href="/tech"action="/tech">Technology</a></li>
+          <li><a href="/engineering"action="/engineering">Engineering</a></li>
+          <li><a href="/math"action="/math">Math</a></li>
+          <li> <a href="/info"action="/info">Login</a> </li>
         </ul>
       </nav>
     </header>
