--- a/DemoDay/views/tech.ejs
+++ b/DemoDay/views/tech.ejs
@@ -4,24 +4,26 @@
     <meta charset="utf-8">
     <title></title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="main.css" />
+		<link rel="stylesheet" href="main.css"/>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Technology</h1>
-    <header>
-      <nav>
+    <header id="header" class="alt">
+      <h1><strong><a href="index.ejs">STEM Projects</a></strong></h1>
+      <nav id="nav">
         <ul>
-          <li> <a href="home.ejs">Home</a> </li>
-          <li><a href="sci.ejs">Science</a></li>
-          <li><a href="tech.ejs">Technology</a></li>
-          <li><a href="engi.ejs">Engineering</a></li>
-          <li><a href="math.ejs">Math</a></li>
-          <li> <a href="login.ejs">Login</a> </li>
+          <li><a href="/" action="/">Home</a></li>
+          <li><a href="/sci"action="/sci">Science</a></li>
+          <li><a href="/tech"action="/tech">Technology</a></li>
+          <li><a href="/engineering"action="/engineering">Engineering</a></li>
+          <li> <a href="/info"action="/info">Login</a> </li>
         </ul>
       </nav>
     </header>
-    <section>
+    <header class="major special">
+      <h2>Technology</h2>
+    </header>
+    <section class="struct">
       <p>Have you ever wondered how webpages like the one you're on right now are created? Well this project will give you a glimpse of how to build your own website!</p>
       <p>First press "option, command, I" on your computer.</p>
       <p></p>
