--- a/DemoDay/views/engi.ejs
+++ b/DemoDay/views/engi.ejs
@@ -8,22 +8,21 @@
 		<link rel="stylesheet" href="main.css" />
   </head>
   <body>
-    <h1>Enginering</h1>
-    <header>
-      <nav>
+    <header id="header" class="alt">
+      <h1><strong><a href="index.ejs">STEM Projects</a></strong></h1>
+      <nav id="nav">
         <ul>
-          <li> <a href="home.ejs">Home</a> </li>
-          <li><a href="sci.ejs">Science</a></li>
-          <li><a href="tech.ejs">Technology</a></li>
-          <li><a href="engi.ejs">Engineering</a></li>
-          <li><a href="math.ejs">Math</a></li>
-          <li> <a href="login.ejs">Login</a> </li>
+          <li><a href="/" action="/">Home</a></li>
+          <li><a href="/sci"action="/sci">Science</a></li>
+          <li><a href="/tech"action="/tech">Technology</a></li>
+          <li><a href="/engineering"action="/engineering">Engineering</a></li>
+          <li> <a href="/info"action="/info">Login</a> </li>
         </ul>
       </nav>
     </header>
-    <section>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    </section>
+    <header class="major special">
+      <h2>Engineering</h2>
+    </header>
     <script src="js/jquery.min.js"></script>
     <script src="js/skel.min.js"></script>
     <script src="js/util.js"></script>
